[fix] overflow flight selector

--- a/src/components/Home/FlightSearcher/FlightSearcher.css
+++ b/src/components/Home/FlightSearcher/FlightSearcher.css
@@ -2,7 +2,6 @@
     width: 100%;
     height: 95vh;
     /*border-radius: 20px;*/
-    overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -27,7 +26,7 @@
 
 .flightSearcher {
     width: 80%;
-    overflow: hidden;
+    /*overflow: hidden;*/
     justify-content: center;
     align-self: center;
     margin-bottom: 3rem;
@@ -60,7 +59,7 @@
 }
 
 .flightSearcher .suggestions-airport-container {
-    max-height: 200px;
+    max-height: 360px;
 }
 
 @media (max-width: 1024px) {
